# dapla-start-api

./: .bumpversion.cfg  .gitignore  Dockerfile  Makefile  README.md  azure-pipeline.yml  pyproject.toml  sonar-project.properties
legal/: contact.md  privacy.md  terms.md
server/: api.py  clients.py  config.py  create_jira_issue.py  emneindeling.py  jira_issue_adf_template.py  logging.py  org_info.py  project_details.py
tests/: __init__.py  adf_template_result.json  test-users-export.csv  test_api.py  test_jira_issue_adf_template.py  test_project_details.py  test_server.py  test_smoke.py
