[tool.poetry]
name = "dapla-start-api"
version = "0.4.0"
description = ""
authors = ["Team Argus"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.0"
requests = "^2.28.0"
PyYAML = "^6.0"
prometheus-fastapi-instrumentator = "^5.7.1"
PyJWT = "^2.3.0"
ecs-logging = "^2.0.0"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
mypy = "^0.971"
pudb = "^2022.1.0"
jsonschema = "^4.7.0"
bump2version = "^1.0.1"
pytest-cov = "^3.0.0"
toml= "^0.10.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
