[tool.poetry]
name = "dapla-start-api"
version = "0.4.2"
description = ""
authors = ["Team Argus"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"
PyYAML = "^6.0.1"
prometheus-fastapi-instrumentator = "^6.1.0"
PyJWT = "^2.8.0"
ecs-logging = "^2.1.0"
pydantic = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
pudb = "^2022.1.3"
jsonschema = "^4.19.0"
bump2version = "^1.0.1"
pytest-cov = "^4.1.0"
toml= "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
