[tool.poetry]
name = "dapla-start-api"
version = "0.4.2"
description = ""
authors = ["Dapla <dapla@ssb.no>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { version = ">=0.101.1", extras = ["all"] }
uvicorn = ">=0.23.2"
requests = ">=2.31.0"
pyyaml = ">=6.0.1"
prometheus-fastapi-instrumentator = ">=6.1.0"
pyjwt = ">=2.8.0"
ecs-logging = ">=2.1.0"
pydantic = ">2"
poetry = ">=1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
mypy = ">=1.5.1"
pudb = ">=2022.1.3"
jsonschema = "*"
bump2version = ">=1.0.1"
pytest-cov = ">=4.1.0"
toml = ">=0.10.2"
black = ">=22.10.0"
httpx = ">=0.24.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
